--- a/.github/workflows/e2etest.yml
+++ b/.github/workflows/e2etest.yml
@@ -1,8 +1,7 @@
 name: e2etest
 on:
-  #16:30に実行
   schedule:
-    - cron: "*/8 * * * *"
+    - cron: "10 9 * * *"
   #push:
   #branches: [main]
   #pull_request:
